--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "dev:windows": "set NODE_ENV=development&& tsx server/index.ts"
+    "dev:windows": "set NODE_ENV=development&& tsx server/index.ts",
+    "vercel-build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
+    "dotenv": "^16.4.5",
+    "passport-local": "^1.0.0",
     "postgres": "^3.4.3",
+    "react-router-dom": "^6.22.3",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
