--- a/vercel.json
+++ b/vercel.json
@@ -2,25 +2,25 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/vercel.ts",
+      "src": "api/index.js",
       "use": "@vercel/node"
     },
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "src": "client/index.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/vercel.ts"
+      "dest": "/api/index.js"
+    },
+    {
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
-      "dest": "dist/$1"
+      "dest": "/client/index.html"
     }
   ]
 }
