--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "vite build",
+    "build": "npx vite build",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "dev:windows": "set NODE_ENV=development&& tsx server/index.ts",
-    "vercel-build": "vite build"
+    "vercel-build": "npx vite build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
