--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "postgres": "^3.4.3",
     "react-router-dom": "^6.22.3",
+    "vite": "^5.4.14",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -87,6 +88,7 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "cross-env": "^7.0.3",
     "ngrok": "^5.0.0-beta.2",
+    "@vitejs/plugin-react": "^4.3.2",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/connect-pg-simple": "^7.0.3",
