--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://postgres.hugfcugkzxrjnbucxcik:nvy9rbg@JRC_azp@hva@aws-0-eu-west-2.pooler.supabase.com:6543/postgres"
+DATABASE_URL="postgresql://postgres.hugfcugkzxrjnbucxcik:nvy9rbg%40JRC_azp%40hva@aws-0-eu-west-2.pooler.supabase.com:6543/postgres"
 SESSION_SECRET="your-session-secret-change-in-production"
 REPL_ID="your-repl-id"
